force-app/main/default/objects/Stopover__c/Stopover__c.object-meta.xml
<CustomObject>
    <label>Stopover</label>
    <nameField>
        <label>Stopover Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stopovers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>