force-app/main/default/objects/Stopover__c/fields/Accomadation_Name__c.field-meta.xml
<CustomField>
    <fullName>Accomadation_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accomadation Name</label>
    <referenceTo>Accomadation__c</referenceTo>
    <relationshipName>Cities</relationshipName>
    <type>Lookup</type>
</CustomField>