force-app/main/default/objects/Stopover__c/fields/Airport__c.field-meta.xml
<CustomField>
    <fullName>Airport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Airport</label>
    <referenceTo>City__c</referenceTo>
    <relationshipName>Cities</relationshipName>
    <type>Lookup</type>
</CustomField>