force-app/main/default/objects/Stopover__c/fields/Arrival__c.field-meta.xml
<CustomField>
    <fullName>Arrival__c</fullName>
    <label>Arrival</label>
    <type>DateTime</type>
</CustomField>