force-app/main/default/objects/Stopover__c/fields/Cost_of_Transport_and_Accomadation__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Transport_and_Accomadation__c</fullName>
    <label>Cost_of_Transport_and_Accomadation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>