force-app/main/default/objects/Stopover__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <formula>(Departure__c-Arrival__c)*24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration (hrs)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>