force-app/main/default/objects/Stopover__c/fields/ndays__c.field-meta.xml
<CustomField>
    <fullName>ndays__c</fullName>
    <label>ndays</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>