force-app/main/default/objects/Stopover__c/fields/Transport_Name__c.field-meta.xml
<CustomField>
    <fullName>Transport_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transport Name</label>
    <referenceTo>Transportation__c</referenceTo>
    <relationshipName>Cities</relationshipName>
    <type>Lookup</type>
</CustomField>