force-app/main/default/objects/Stopover__c/fields/Trip__c.field-meta.xml
<CustomField>
    <fullName>Trip__c</fullName>
    <label>Trip Name</label>
    <referenceTo>Trip__c</referenceTo>
    <relationshipName>Cities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>