force-app/main/default/objects/Stopover__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Total_Costs__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>